Feat: auto generate closing journal
