# swagger/swagger.yaml
@@ -213,6 +213,18 @@ definitions:
       updatedAt:
         type: string
     type: object
+  http.ClosingJournalIdsResponse:
+    properties:
+      monthlyClosingJournalId:
+        type: string
+      yearEndClosingJournalId:
+        type: string
+    type: object
+  http.ClosingJournalResponse:
+    properties:
+      journalId:
+        type: string
+    type: object
   http.CreateAccountRequest:
     properties:
       balanceDirection:
@@ -1670,6 +1682,99 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/http.JournalDetailResponse'
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_general_ledger_port_public_http.Error'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_general_ledger_port_public_http.Error'
+      tags:
+        - journals
+  /sob/{sobId}/journals/closing-journal:
+    get:
+      consumes:
+        - application/json
+      description: Get both monthly and year-end closing journal IDs for a given period
+      parameters:
+        - description: Sob ID
+          in: path
+          name: sobId
+          required: true
+          type: string
+        - description: Period in YYYY-MM format
+          in: query
+          name: period
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/http.ClosingJournalIdsResponse'
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_general_ledger_port_public_http.Error'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_general_ledger_port_public_http.Error'
+      tags:
+        - journals
+  /sob/{sobId}/journals/monthly-closing-journal:
+    post:
+      consumes:
+        - application/json
+      description: Generate and post monthly closing journal that reverses all leaf
+        P&L account balances to zero and transfers the net result to the Current Year
+        Profit account
+      parameters:
+        - description: Sob ID
+          in: path
+          name: sobId
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '201':
+          description: Created
+          schema:
+            $ref: '#/definitions/http.ClosingJournalResponse'
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/internal_general_ledger_port_public_http.Error'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/internal_general_ledger_port_public_http.Error'
+      tags:
+        - journals
+  /sob/{sobId}/journals/year-end-closing-journal:
+    post:
+      consumes:
+        - application/json
+      description: Generate and post year-end closing journal that transfers the Current
+        Year Profit account balance to Retained Earnings. Only callable in period
+        12 (year-end) after monthly closing is complete
+      parameters:
+        - description: Sob ID
+          in: path
+          name: sobId
+          required: true
+          type: string
+      produces:
+        - application/json
+      responses:
+        '201':
+          description: Created
+          schema:
+            $ref: '#/definitions/http.ClosingJournalResponse'
         '400':
           description: Bad Request
           schema:
